<resources>
    <string name="app_name">Help</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="button_login">Login</string>
    <string name="label_usuario">Usuário</string>
    <string name="login">Login</string>
    <string name="lembrar_senha">Lembrar Senha</string>
    <string name="titulo">HELP</string>
    <string name="tituloBO">HELP</string>
    <string name="tituloMapa">Ver Mapa</string>
    <string name="txtbtn_ChamaReclamacoes">Fazer Reclamação</string>
    <string name="tituloSair">Sair</string>
    <string name="TextoPolicia">Chamar Polícia</string>
    <string name="TextoEmergencia">Chamar Ambulância</string>
    <string name="TextoOcorrencia">Ocorrência</string>
    <string name="txt_Nome">Nome</string>
    <string name="txt_Logradouro">Logradouro</string>
    <string name="txt_CPF">CPF</string>
    <string name="txt_CEP">CEP</string>
    <string name="txt_Numero">Número</string>
    <string name="txt_Bairro">Bairro</string>
    <string name="txt_Cidade">Cidade</string>
    <string name="txt_Estado">Estado</string>
    <string name="txt_DataNascimento">Nascimento</string>
    <string name="txtbtn_ChamaPolicia">Chamar Policia</string>
    <string name="txtbtn_ChamaAmbulancia">Chamar Ambulancia</string>
    <string name="title_activity_mapa">Map</string>
    <string name="txt_BotaoEnviar">Enviar</string>
    <string name="btn_EndAtual">Clique para Atribuir seu local atual</string>
    <string name="btn_VerHistorico">Histórico Reclamações</string>
    <string name="title_activity_historico__reclamacoes">Historico_Reclamacoes</string>

</resources>
